# fraud-detection-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
fraud_agent/: agent.py  graph.py  schemas.py  scoring.py  server.py  tools.py
k8s/: deployment.yaml  secret.yaml  service.yaml
tests/: test_scoring.py  test_tools.py
