[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fraud-detection-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1",
    "langchain-core>=1.2",
    "langchain-groq>=1.1",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fraud_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
